add_library(Zepha_Core
        client/Client.cpp
        client/Client.h
        client/conn/ClientNetworkInterpreter.cpp
        client/conn/ClientNetworkInterpreter.h
        client/conn/ServerConnection.cpp
        client/conn/ServerConnection.h
        client/entity/ParticleEntity.cpp
        client/entity/ParticleEntity.h
        client/entity/PlayerEntity.h
        client/entity/WireframeEntity.cpp
        client/entity/WireframeEntity.h
        client/graph/Camera.cpp
        client/graph/Camera.h
        client/graph/Drawable.h
        client/graph/DrawableGroup.cpp
        client/graph/DrawableGroup.h
        client/graph/Font.cpp
        client/graph/Font.h
        client/graph/mesh/ChunkMesh.cpp
        client/graph/mesh/ChunkMesh.h
        client/graph/mesh/ChunkMeshGenerator.cpp
        client/graph/mesh/ChunkMeshGenerator.h
        client/graph/mesh/ChunkRenderElem.h
        client/graph/mesh/ChunkVertex.h
        client/graph/mesh/EntityMesh.cpp
        client/graph/mesh/EntityMesh.h
        client/graph/mesh/EntityVertex.h
        client/graph/mesh/Mesh.cpp
        client/graph/mesh/Mesh.h
        client/graph/mesh/MeshChunk.cpp
        client/graph/mesh/MeshChunk.h
        client/graph/Model.cpp
        client/graph/Model.h
        client/graph/ModelAnimation.cpp
        client/graph/ModelAnimation.h
        client/graph/ModelBone.cpp
        client/graph/ModelBone.h
        client/graph/Renderer.cpp
        client/graph/Renderer.h
        client/graph/shader/BlurShader.cpp
        client/graph/shader/BlurShader.h
        client/graph/shader/EntityGeometryShader.cpp
        client/graph/shader/EntityGeometryShader.h
        client/graph/shader/GuiUniforms.h
        client/graph/shader/LightingShader.cpp
        client/graph/shader/LightingShader.h
        client/graph/shader/Shader.cpp
        client/graph/shader/Shader.h
        client/graph/shader/SSAOShader.cpp
        client/graph/shader/SSAOShader.h
        client/graph/shader/WorldGeometryShader.cpp
        client/graph/shader/WorldGeometryShader.h
        client/graph/Texture.cpp
        client/graph/Texture.h
        client/gui/basic/GuiContainer.cpp
        client/gui/basic/GuiContainer.h
        client/gui/basic/GuiGraph.cpp
        client/gui/basic/GuiGraph.h
        client/gui/basic/GuiInventoryItem.cpp
        client/gui/basic/GuiInventoryItem.h
        client/gui/basic/GuiModel.cpp
        client/gui/basic/GuiModel.h
        client/gui/basic/GuiRect.cpp
        client/gui/basic/GuiRect.h
        client/gui/basic/GuiText.cpp
        client/gui/basic/GuiText.h
        client/gui/compound/GuiImageButton.cpp
        client/gui/compound/GuiImageButton.h
        client/gui/compound/GuiInventoryList.cpp
        client/gui/compound/GuiInventoryList.h
        client/gui/compound/GuiLabelledGraph.cpp
        client/gui/compound/GuiLabelledGraph.cpp
        client/gui/DebugGui.cpp
        client/gui/DebugGui.h
        client/gui/GameGui.cpp
        client/gui/GameGui.h
        client/gui/GameGuiBuilder.cpp
        client/gui/GameGuiBuilder.h
        client/gui/GuiBuilder.cpp
        client/gui/GuiBuilder.h
        client/gui/GuiComponent.cpp
        client/gui/GuiComponent.h
        client/gui/SerialGui.h
        client/Input.cpp
        client/Input.h
        client/LocalServerInstance.cpp
        client/LocalServerInstance.h
        client/menu/MenuSandbox.cpp
        client/menu/MenuSandbox.h
        client/menu/SubgameConfig.h
        client/menu/SubgameDef.h
        client/scene/ConnectScene.cpp
        client/scene/ConnectScene.h
        client/scene/GameScene.cpp
        client/scene/GameScene.h
        client/scene/LuaErrorScene.cpp
        client/scene/LuaErrorScene.h
        client/scene/MainMenuScene.cpp
        client/scene/MainMenuScene.h
        client/scene/Scene.h
        client/scene/SceneManager.cpp
        client/scene/SceneManager.h
        client/stream/ChunkMeshDetails.h
        client/stream/MeshGenStream.cpp
        client/stream/MeshGenStream.h
        client/stream/WorldInterpolationStream.cpp
        client/stream/WorldInterpolationStream.h
        client/Window.cpp
        client/Window.h
        game/atlas/asset/AssetStorage.h
        game/atlas/asset/AssetType.h
        game/atlas/asset/AtlasRef.h
        game/atlas/asset/ModelStore.h
        game/atlas/asset/SerializedModel.h
        game/atlas/asset/ServerTexture.h
        game/atlas/BiomeAtlas.cpp
        game/atlas/BiomeAtlas.h
        game/atlas/DefinitionAtlas.cpp
        game/atlas/DefinitionAtlas.h
        game/atlas/LocalBiomeAtlas.cpp
        game/atlas/LocalBiomeAtlas.h
        game/atlas/LocalDefinitionAtlas.cpp
        game/atlas/LocalDefinitionAtlas.h
        game/atlas/ServerBiomeAtlas.cpp
        game/atlas/ServerBiomeAtlas.h
        game/atlas/ServerDefinitionAtlas.cpp
        game/atlas/ServerDefinitionAtlas.h
        game/atlas/TextureAtlas.cpp
        game/atlas/TextureAtlas.h
        game/def/BiomeDef.h
        game/def/BlockDef.cpp
        game/def/BlockDef.h
        game/def/CraftItemDef.cpp
        game/def/CraftItemDef.h
        game/def/ItemDef.h
        game/def/mesh/BlockModel.cpp
        game/def/mesh/BlockModel.h
        game/def/mesh/BlockModelVertex.h
        game/def/mesh/MeshPart.cpp
        game/def/mesh/MeshPart.h
        game/def/mesh/SelectionBox.h
        game/def/mesh/ShaderMod.h
        game/LocalSubgame.cpp
        game/LocalSubgame.h
        game/ServerSubgame.cpp
        game/ServerSubgame.h
        game/Subgame.h
        lua/Callback.h
        lua/customization/vec3.hpp
        lua/ErrorFormatter.cpp
        lua/ErrorFormatter.h
        lua/LocalLuaParser.cpp
        lua/LocalLuaParser.h
        lua/LocalModHandler.cpp
        lua/LocalModHandler.h
        lua/LuaKeybindHandler.cpp
        lua/LuaKeybindHandler.h
        lua/LuaMod.cpp
        lua/LuaMod.h
        lua/LuaParser.cpp
        lua/LuaParser.h
        lua/modules/BaseModule.h
        lua/modules/Dimension.cpp
        lua/modules/Dimension.h
        lua/modules/mSetGui.h
        lua/modules/mStartGame.h
        lua/modules/SubgameModule.cpp
        lua/modules/SubgameModule.h
        lua/modules/Time.cpp
        lua/modules/Time.h
        lua/register/RegisterBiome.h
        lua/register/RegisterBlock.h
        lua/register/RegisterItem.h
        lua/register/RegisterKeybind.h
        lua/ServerLuaParser.cpp
        lua/ServerLuaParser.h
        lua/ServerModHandler.cpp
        lua/ServerModHandler.h
        lua/usertype/AnimationManager.cpp
        lua/usertype/AnimationManager.h
        lua/usertype/BaseUsertype.h
        lua/usertype/Dimension.cpp
        lua/usertype/Dimension.h
        lua/usertype/Entity.cpp
        lua/usertype/Entity.h
        lua/usertype/Inventory.cpp
        lua/usertype/Inventory.h
        lua/usertype/InventoryList.cpp
        lua/usertype/InventoryList.h
        lua/usertype/ItemStack.cpp
        lua/usertype/ItemStack.h
        lua/usertype/LuaGuiElement.cpp
        lua/usertype/LuaGuiElement.h
        lua/usertype/Player.cpp
        lua/usertype/Player.h
        lua/usertype/SubgameUsertype.h
        lua/usertype/Target.cpp
        lua/usertype/Target.h
        server/Server.cpp
        server/Server.h
        server/ServerClient.cpp
        server/ServerClient.h
        server/ServerClients.cpp
        server/ServerClients.h
        server/ServerConfig.cpp
        server/ServerConfig.h
        server/stream/ServerGenStream.cpp
        server/stream/ServerGenStream.h
        server/stream/ServerPacketStream.cpp
        server/stream/ServerPacketStream.h
        StartGame.h
        util/Any.h
        util/CovariantPtr.h
        util/frustum/Frustum.cpp
        util/frustum/Frustum.h
        util/frustum/FrustumAABB.cpp
        util/frustum/FrustumAABB.h
        util/frustum/FrustumPlane.cpp
        util/frustum/FrustumPlane.h
        util/Interp.h
        util/Lockable.h
        util/Log.h
        util/Mat4Conv.h
        util/net/Address.h
        util/net/Deserializer.h
        util/net/NetHandler.cpp
        util/net/NetHandler.h
        util/net/NetState.h
        util/net/Packet.cpp
        util/net/Packet.h
        util/net/PacketView.cpp
        util/net/PacketView.h
        util/net/Serializer.h
        util/Ray.cpp
        util/Ray.h
        util/RIE.h
        util/Schematic.cpp
        util/Schematic.h
        util/Space.h
        util/Target.cpp
        util/Target.h
        util/Timer.cpp
        util/Timer.h
        util/Util.h
        util/Vec.h
        util/Voronoi3D.cpp
        util/Voronoi3D.h
        world/dim/chunk/Chunk.cpp
        world/dim/chunk/Chunk.h
        world/dim/chunk/MapBlock.cpp
        world/dim/chunk/MapBlock.h
        world/dim/chunk/Region.cpp
        world/dim/chunk/Region.h
        world/dim/Dimension.cpp
        world/dim/Dimension.h
        world/dim/DimensionBase.cpp
        world/dim/DimensionBase.h
        world/dim/ent/AnimationSegment.h
        world/dim/ent/AnimationState.cpp
        world/dim/ent/AnimationState.h
        world/dim/ent/AnimChannel.cpp
        world/dim/ent/AnimChannel.h
        world/dim/ent/Collision.cpp
        world/dim/ent/Collision.h
        world/dim/ent/DrawableEntity.cpp
        world/dim/ent/DrawableEntity.h
        world/dim/ent/Entity.cpp
        world/dim/ent/Entity.h
        world/dim/ent/LocalLuaEntity.cpp
        world/dim/ent/LocalLuaEntity.h
        world/dim/ent/LuaEntity.cpp
        world/dim/ent/LuaEntity.h
        world/dim/ent/ServerLuaEntity.cpp
        world/dim/ent/ServerLuaEntity.h
        world/dim/file/FileManipulator.cpp
        world/dim/file/FileManipulator.h
        world/dim/LocalDimension.cpp
        world/dim/LocalDimension.h
        world/dim/ServerDimension.cpp
        world/dim/ServerDimension.h
        world/gen/MapGen.cpp
        world/gen/MapGen.h
        world/gen/MapGenProps.cpp
        world/gen/MapGenProps.h
        world/gen/NoiseSample.cpp
        world/gen/NoiseSample.h
        world/inv/Inventory.cpp
        world/inv/Inventory.h
        world/inv/InventoryList.cpp
        world/inv/InventoryList.h
        world/inv/InventoryRefs.cpp
        world/inv/InventoryRefs.h
        world/inv/ItemStack.cpp
        world/inv/ItemStack.h
        world/inv/LocalInventory.cpp
        world/inv/LocalInventory.h
        world/inv/LocalInventoryRefs.cpp
        world/inv/LocalInventoryRefs.h
        world/inv/ServerInventory.cpp
        world/inv/ServerInventory.h
        world/inv/ServerInventoryList.cpp
        world/inv/ServerInventoryList.h
        world/inv/ServerInventoryRefs.cpp
        world/inv/ServerInventoryRefs.h
        world/LocalWorld.cpp
        world/LocalWorld.h
        world/player/LocalPlayer.cpp
        world/player/LocalPlayer.h
        world/player/Player.cpp
        world/player/Player.h
        world/player/ServerPlayer.cpp
        world/player/ServerPlayer.h
        world/ServerWorld.cpp
        world/ServerWorld.h
        world/World.cpp
        world/World.h
        util/net/Address.cpp util/Bounds.cpp util/Bounds.h lua/register/CreateRegister.h lua/register/CreateRegister.cpp lua/modules/Structure.cpp lua/modules/Structure.h lua/modules/Message.cpp lua/modules/Message.h)

target_include_directories(Zepha_Core PUBLIC .)